[project]
name = "livekit-voice-agent"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "livekit-agents[turn-detector]>=1.5.2",
    "livekit-plugins-ai-coustics>=0.2.7",
    "livekit-plugins-noise-cancellation>=0.2.5",
    "livekit-plugins-silero>=1.5.2",
    "livekit-plugins-turn-detector>=1.5.2",
    "onnxruntime<1.24",
    "python-dotenv>=1.2.2",
]
